@@ -11,6 +11,7 @@ import android.net.ConnectivityManager;
 import android.net.NetworkInfo;
 import android.os.Environment;
 import android.os.IBinder;
+import android.telephony.TelephonyManager;
 import android.util.Log;
 import android.util.Pair;
 import android.util.SparseArray;
@@ -40,6 +41,7 @@ import com.ford.syncV4.protocol.enums.ServiceType;
 import com.ford.syncV4.proxy.RPCRequest;
 import com.ford.syncV4.proxy.RPCRequestFactory;
 import com.ford.syncV4.proxy.SyncProxyALM;
+import com.ford.syncV4.proxy.SyncProxyConfigurationResources;
 import com.ford.syncV4.proxy.constants.Names;
 import com.ford.syncV4.proxy.interfaces.IProxyListenerALMTesting;
 import com.ford.syncV4.proxy.rpc.AddCommand;
@@ -377,9 +379,13 @@ public class ProxyService extends Service implements IProxyListenerALMTesting, I
                     appID = AppPreferencesManager.getCustomAppId();
                 }
 
+                SyncProxyConfigurationResources syncProxyConfigurationResources =
+                        new SyncProxyConfigurationResources();
+                syncProxyConfigurationResources.setTelephonyManager(
+                        (TelephonyManager) MainApp.getInstance().getSystemService(Context.TELEPHONY_SERVICE));
 
                 mSyncProxy = new SyncProxyALM(this,
-                        /*sync proxy configuration resources*/null,
+                        syncProxyConfigurationResources/*sync proxy configuration resources*/,
                         /*enable advanced lifecycle management true,*/
                         appName,
                         /*ngn media app*/null,
